build/log/idf_py_stderr_output_10212
Command: make -j 6 all
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:18:7: error: expected ';' before 'enum'
   18 | typdef enum { IDE, START, RUN, STOP } State_Test;
      |       ^~~~~
      |       ;
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:19:1: error: unknown type name 'state_test'
   19 | state_test para_cmd(char *cmd) {
      | ^~~~~~~~~~
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c: In function 'echo_task':
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:64:12: error: 'IDLE' undeclared (first use in this function); did you mean 'IDE'?
   64 |       case IDLE:
      |            ^~~~
      |            IDE
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:64:12: note: each undeclared identifier is reported only once for each function it appears in
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:65:9: error: implicit declaration of function 'print'; did you mean 'printf'? [-Wimplicit-function-declaration]
   65 |         print("Program is ready to test");
      |         ^~~~~
      |         printf
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c: In function 'para_cmd':
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:28:1: error: control reaches end of non-void function [-Werror=return-type]
   28 | }
      | ^
cc1: all warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/usb_serial_echo_main.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:4813: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
